# ADAS-pipeline

./: .gitignore  PROJECT_SUMMARY.md  README.md  test_carla_connection.py
adas_dev_env/: MAC_SETUP.md  README.md  docker-compose.mac.yml  docker-compose.yml
adas_dev_env/catkin_ws/src/adas_msgs/: package.xml
adas_dev_env/catkin_ws/src/adas_msgs/msg/: ObstacleInfo.msg
adas_dev_env/catkin_ws/src/adas_pipeline/: CMakeLists.txt  package.xml
adas_dev_env/catkin_ws/src/adas_pipeline/scripts/: aeb_node.py  sensor_fusion_node.py  vehicle_control_node.py
adas_dev_env/docker/adas_pipeline/: Dockerfile
carla_standalone_adas/: Dockerfile  carla_adas_standalone.py
docs/: adas_marketing_dashboard.html  adas_project_flowchart.mermaid
runpod_ros_bridge/: Dockerfile
runpod_ros_bridge/adas_msgs/: CMakeLists.txt
runpod_ros_bridge/adas_pipeline/: package.xml
runpod_ros_bridge/adas_pipeline/launch/: adas_pipeline.launch  full_stack.launch
runpod_ros_bridge/adas_pipeline/scripts/: acc_node.py  lane_keeping_node.py
