<?xml version="1.0"?>
<package format="2">
  <name>adas_pipeline</name>
  <version>0.1.0</version>
  <description>Integrated ADAS module pipeline for CARLA (sensor fusion, ACC, LKA, AEB)</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>adas_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>adas_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
</package>
